# public-road-works-analysis

./: .gitignore  dvc.yaml  out.txt  pyproject.toml  pytest.ini  requirements.txt
.dvc/: config
data/: .gitignore  checkpoint.json.dvc  chunk_embeddings.dvc  dataset.csv  dataset.csv.dvc  ids.txt  ids.txt.dvc  mlruns.dvc  model_checkpoints.dvc  pbcs_extracted.dvc  tenders-raw.xlsx.dvc
data/pbcs_extracted/: 339671.txt  339854.txt  340222.txt  340395.txt
notebooks/: Flujo_entrenamiento_con_cache_embeddings.ipynb  Model Training.ipynb
src/: clean_tenders_list.py
src/models/: __init__.py
src/models/item_extractor/: item_extractor.py
src/modules/: __init__.py
src/modules/pdf_reader/: __init__.py  main.py  pdf_reader.py
src/modules/tcs_downloader/: __init__.py  main.py  tcs_downloader.py
src/scripts/: scrap_tenders.py
test/: README.md  __init__.py  test_tcs_downloader.py
test/fixtures/: __init__.py  carta_invitacion.docx  documento_general.docx  pbc_licitacion.docx  pliego_bases_condiciones.doc  pliego_bases_condiciones.docx
